[package]
name = "posts"
version = "0.1.0"
authors = ["Vlady Veselinov <vladkodmc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.94", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
